# compose-rs-proposal

./: .gitignore  AGENTS.md  Cargo.toml  NEXT_ROADMAP.md  README.md  RECOMPOSITION.md  ROADMAP.md  ROOT_CAUSE_ANALYSIS.md  SNAPSHOT_V2_STATUS.md  all_to_txt.sh  composer_context.sh  continue.md  gen.py  measure_context.sh  proposal.md  single_file_code.md  slot_doc.md  test_fill_max_width.rs  test_layout_debug.rs  test_node_duplication.rs
apps/desktop-demo/: Cargo.toml
apps/desktop-demo/src/: main.rs  renderer.rs
apps/desktop-demo/src/tests/: main_tests.rs
apps/minimal-single-file/: Cargo.toml
apps/minimal-single-file/src/: main.rs
compose-core/: Cargo.toml
compose-core/src/: animation.rs  lib.rs  modifier.rs  signals.rs  subcompose.rs  testing.rs
compose-macros/: Cargo.toml
compose-macros/src/: lib.rs
compose-rs/: Cargo.toml
compose-rs/compose_core/: Cargo.toml
compose-rs/compose_core/src/: lib.rs
compose-rs/compose_macros/: Cargo.toml
compose-rs/compose_macros/src/: lib.rs
compose-rs/compose_platform/: Cargo.toml
compose-rs/compose_platform/src/: lib.rs
compose-rs/compose_skia/: Cargo.toml
compose-rs/compose_skia/src/: lib.rs
compose-rs/compose_ui/: Cargo.toml
compose-rs/compose_ui/src/: lib.rs
compose-rs/src/: main.rs
compose-runtime-std/src/: lib.rs
compose-ui/: Cargo.toml
compose-ui/src/: debug.rs  layout.rs  lib.rs  modifier.rs  modifier_nodes.rs  primitives.rs  renderer.rs  subcompose_layout.rs
compose-ui/src/layout/: core.rs  mod.rs  policies.rs
compose-ui/tests/: composition_switching_test.rs  intrinsics_test.rs
crates/compose-animation/: Cargo.toml
crates/compose-animation/src/: animation.rs  lib.rs
crates/compose-animation/src/tests/: animation_tests.rs
crates/compose-app/: Cargo.toml
crates/compose-app-shell/: Cargo.toml
crates/compose-app-shell/src/: lib.rs
crates/compose-app-shell/src/tests/: app_shell_tests.rs
crates/compose-app-shell/tests/: async_loop.rs  static_app.rs
crates/compose-app/src/: lib.rs
crates/compose-assets/: Cargo.toml
crates/compose-assets/src/: lib.rs
crates/compose-core/: Cargo.toml
crates/compose-core/src/: animation.rs  collections.rs  composer_context.rs  derived_state.rs  frame_clock.rs  hash.rs  launched_effect.rs  lib.rs  mutable_state.rs  owned.rs  platform.rs  runtime.rs  snapshot.rs  snapshot_double_index_heap.rs  snapshot_id_set.rs  snapshot_pinning.rs  snapshot_state_observer.rs  snapshot_weak_set.rs  snapshots.rs  state.rs  subcompose.rs  testing.rs
crates/compose-core/src/snapshot_v2/: global.rs  integration_tests.rs  mod.rs  mutable.rs  nested.rs  readonly.rs  runtime.rs  transparent.rs
crates/compose-core/src/tests/: lib_tests.rs  recursive_decrease_increase_test.rs  slot_relocation_tests.rs  subcompose_tests.rs
crates/compose-foundation/: Cargo.toml  README.md
crates/compose-foundation/src/: lib.rs  modifier.rs
crates/compose-foundation/src/nodes/input/: focus.rs  types.rs
crates/compose-foundation/src/tests/: modifier_tests.rs
crates/compose-macros/: Cargo.toml
crates/compose-macros/src/: lib.rs
crates/compose-platform/desktop-winit/: Cargo.toml  README.md
crates/compose-platform/desktop-winit/src/: lib.rs
crates/compose-render/common/: Cargo.toml  README.md
crates/compose-render/common/src/: lib.rs  text.rs
crates/compose-render/pixels/: Cargo.toml  README.md
crates/compose-render/pixels/src/: draw.rs  lib.rs  pipeline.rs  scene.rs  style.rs
crates/compose-render/wgpu/: Cargo.toml  README.md
crates/compose-render/wgpu/src/: lib.rs
crates/compose-runtime-std/: Cargo.toml
crates/compose-runtime-std/src/: lib.rs
crates/compose-runtime-std/src/tests/: std_runtime_tests.rs
crates/compose-testing/: Cargo.toml  README.md
crates/compose-testing/src/: lib.rs  testing.rs
crates/compose-testing/src/tests/: recomposition_tests.rs  testing_tests.rs
crates/compose-ui/: Cargo.toml  README.md
crates/compose-ui-graphics/: Cargo.toml  README.md
crates/compose-ui-graphics/src/: geometry.rs  lib.rs  typography.rs
crates/compose-ui-layout/: Cargo.toml  README.md
crates/compose-ui-layout/src/: arrangement.rs  axis.rs  constraints.rs  core.rs  lib.rs
crates/compose-ui-layout/src/tests/: arrangement_tests.rs
crates/compose-ui/benches/: pipeline.rs  skip_recomposition.rs
crates/compose-ui/examples/: test_node_duplication.rs
crates/compose-ui/src/: debug.rs  draw.rs  lib.rs  modifier.rs  modifier_bridge.rs  modifier_nodes.rs  primitives.rs  renderer.rs  subcompose_layout.rs
crates/compose-ui/src/layout/: core.rs  mod.rs  policies.rs
crates/compose-ui/src/layout/tests/: layout_tests.rs  policies_tests.rs
crates/compose-ui/src/modifier/: background.rs  clickable.rs  draw_cache.rs  graphics_layer.rs  mod.rs  padding.rs  pointer_input.rs
crates/compose-ui/src/modifier/tests/: modifier_tests.rs
crates/compose-ui/src/tests/: anchor_async_tests.rs  async_runtime_full_layout_test.rs  debug_tests.rs  modifier_nodes_tests.rs  primitives_tests.rs  renderer_tests.rs  subcompose_layout_tests.rs  tab_switching_tests.rs
crates/compose-ui/src/widgets/: box_widget.rs  button.rs  column.rs  foreach.rs  layout.rs  mod.rs  nodes.rs  row.rs  scopes.rs  spacer.rs  text.rs
crates/compose-ui/src/widgets/nodes/: button_node.rs  layout_node.rs  mod.rs  spacer_node.rs  text_node.rs
crates/compose-ui/tests/: composition_switching_test.rs  intrinsics_test.rs
desktop-app/: Cargo.toml
desktop-app/src/: main.rs
docs/: ALLOCATION_INVENTORY.md  CONTEXT_PACKS.md  CONTEXT_PACKS_NEW.md  Jetpack Compose Mental Model.md  REORG_PLAN.md  RESTRUCTURE_SUMMARY.md  RESTRUCTURING_FINAL.md  RESTRUCTURING_STATUS.md  ROADMAP.md  ROADMAP_HISTORY.md  STRUCTURE.md  layout_intrinsics.md  slot_doc.md  state_runtime_weaknesses.md
