[workspace]
members = [
    "crates/compose-core",
    "crates/compose-macros",
    "crates/compose-runtime-std",
    "crates/compose-ui-graphics",
    "crates/compose-ui-layout",
    "crates/compose-foundation",
    "crates/compose-animation",
    "crates/compose-ui",
    "crates/compose-testing",
    "apps/desktop-demo",
]
resolver = "2"
