[package]
name = "desktop-app"
version = "0.1.0"
edition = "2021"

[dependencies]
compose-core = { path = "../../crates/compose-core" }
compose-runtime-std = { path = "../../crates/compose-runtime-std" }
compose-ui = { path = "../../crates/compose-ui" }
pixels = "0.13"
winit = "0.28"
once_cell = "1.18"
rusttype = "0.9"
log = "0.4"
env_logger = "0.10"
