[package]
name = "compose-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core runtime for a Jetpack Compose inspired UI framework in Rust"

[dependencies]
anyhow = "1.0"

[features]
default = []

[dev-dependencies]
compose-macros = { path = "../compose-macros" }
compose-testing = { path = "../compose-testing" }
