[package]
name = "compose-ui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "UI primitives for Compose-RS"

[dependencies]
compose-core = { path = "../compose-core" }
compose-macros = { path = "../compose-macros" }
compose-runtime-std = { path = "../compose-runtime-std" }
indexmap = "2"

[features]
default = []

[dev-dependencies]
criterion = "0.5"
