[package]
name = "compose-render-wgpu"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WGPU renderer backend for Compose-RS"

[dependencies]
compose-render-common = { path = "../common" }
compose-ui-graphics = { path = "../../compose-ui-graphics" }
compose-foundation = { path = "../../compose-foundation" }
